--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,11 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Libraries"
+    "# Libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -32,11 +35,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "heights = [167, 167, 168, 168, 168, 169, 171, 172, 173, 175, 175, 175, 177, 182, 195]\n",
+    "confidence_level= 0.80\n",
+    "population_std= 4\n",
+    "sample_size= len(heights)\n",
+    "sample_heights_mean = np.mean(heights)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(172.14308590115726, 174.79024743217607)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.norm.interval(confidence_level, loc=sample_heights_mean, scale=population_std/np.sqrt(sample_size))"
    ]
   },
   {
@@ -51,11 +79,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "confidence_level =0.80\n",
+    "population_std = 0.84\n",
+    "sample_size =105\n",
+    "loses=27\n",
+    "sample_proportion = loses/sample_size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.84\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = stats.norm.ppf(.80)   \n",
+    "print(round(z, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21599999999999997"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_mean = sample_proportion * population_std\n",
+    "sample_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.11094403363060824, 0.3210559663693917)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.norm.interval(confidence_level, loc=sample_mean, scale=population_std/np.sqrt(sample_size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left end:  0.14700758924793728\n",
+      "right end:  0.28499241075206266\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"left end: \", sample_mean - z * (population_std / np.sqrt(sample_size)))\n",
+    "print(\"right end: \", sample_mean + z * (population_std / np.sqrt(sample_size)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.28\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = stats.norm.ppf(.90)  \n",
+    "print(round(z, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2571428571428571"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confidence_level_1 =0.90\n",
+    "population_std = 1.28\n",
+    "sample_size =105\n",
+    "loses=27\n",
+    "sample_proportion = loses/sample_size\n",
+    "sample_proportion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3291428571428571"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_mean = sample_proportion * population_std\n",
+    "sample_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left end:  0.16905757505616498\n",
+      "right end:  0.4892281392295493\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"left end: \", sample_mean - z * (population_std / np.sqrt(sample_size)))\n",
+    "print(\"right end: \", sample_mean + z * (population_std / np.sqrt(sample_size)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.16905757505616498, 0.4892281392295493)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.norm.interval(confidence_level, loc=sample_mean, scale=population_std/np.sqrt(sample_size))"
    ]
   },
   {
@@ -131,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
